--- a/scss/_burgermenu.scss
+++ b/scss/_burgermenu.scss
@@ -58,8 +58,12 @@ input + label {
 
     
     input:checked ~.main-menu {
-      display: grid; 
-      background: #CCC;      
+      display: block;
+      background: $bg;
+      li {
+        width: 100%;
+        text-align: center;
+      }      
     }
 
 
