--- a/scss/_burgermenu.scss
+++ b/scss/_burgermenu.scss
@@ -59,7 +59,7 @@ input + label {
     
     input:checked ~.main-menu {
       display: block;
-      background: $bg;
+      background: $btn-shadow;
       li {
         width: 100%;
         text-align: center;
