--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,9 +18,14 @@
 
 	@media screen and (max-width: 1024px) {
 		display: block;
+
+		.logo {
+			text-align: center;
+		}
 		
 		img {
-		display: flex;				
+		display:inline-block;				
+		text-align: center;				
 		margin: 0 auto 20px;			
 		}		
 	}
