--- a/css/style2.css
+++ b/css/style2.css
@@ -351,7 +351,7 @@ input:checked + label span:last-child {
 
 input:checked ~ .main-menu {
   display: block;
-  background: #443255; }
+  background: #6d5384; }
   input:checked ~ .main-menu li {
     width: 100%;
     text-align: center; }
