--- a/css/style2.css
+++ b/css/style2.css
@@ -70,12 +70,16 @@
       -webkit-box-shadow: 3px 3px 0 0 #4c2f65;
       box-shadow: 3px 3px 0 0 #4c2f65; }
 
-.btn-primery:hover {
-  background-color: #f7df59;
-  position: relative;
+.btn-primery {
   -webkit-transition: 1s;
   -o-transition: 1s;
   transition: 1s; }
+  .btn-primery:hover {
+    background-color: #f7df59;
+    position: relative;
+    -webkit-transition: 1s;
+    -o-transition: 1s;
+    transition: 1s; }
 
 .section-slider {
   z-index: 0;
@@ -350,6 +354,9 @@ input:checked + label span:last-child {
   transform: rotate(-405deg); }
 
 input:checked ~ .main-menu {
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
   display: block;
   background: #6d5384; }
   input:checked ~ .main-menu li {
