--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,7 +14,7 @@
 	left: 0;
 	right: 0;
 	justify-content: space-between;	
-	align-items: center;
+	align-items: center;	
 
 	@media screen and (max-width: 1024px) {
 		display: block;
@@ -31,7 +31,7 @@
 	}
 
 	@media screen and (max-width: 767px) {
-		display: block;		
+		display: block;				
 	}
 
 }
@@ -40,7 +40,7 @@
 
 .main-menu {	
 	list-style: none;
-	margin: 0 -5px;
+	margin: 0 -5px;	
 
 	@media screen and (max-width: 1024px) {		
 		padding-top: 10px;
@@ -49,13 +49,13 @@
 	}
 
 	@media screen and (max-width: 767px) {
-		display: none;		
+		display: none;				
 	}
 
 	& li {
 		padding: 0 5px;
 		display: inline-block;
-		margin-bottom: 10px;
+		margin-bottom: 10px;		
 		}
 	& .active {
 		& a {
@@ -79,6 +79,8 @@
 }
 
 .btn-primery {
+	transition: 1s;
+
 	&:hover {
 		background-color: $yellow;		
 		position: relative;
