--- a/scss/_burgermenu.scss
+++ b/scss/_burgermenu.scss
@@ -58,8 +58,9 @@ input + label {
 
     
     input:checked ~.main-menu {
-  transition: 1s;
-      
+      visibility: visible;
+      opacity: 1;
+
       display: block;
       background: $bg;
       li {
